--- a/newApplication/src/app/bookApp/book/book.component.html
+++ b/newApplication/src/app/bookApp/book/book.component.html
@@ -32,6 +32,12 @@
                         </a>
                     </div>
 
+                    <div>
+                        <a [routerLink] ="['/showLend']">
+                            <button class="btn btn-success">Show Lended Book</button>
+                        </a>
+                    </div>
+
                     
 
                 </div>
